# Administracion

./: .env_example  .settings_example  MANIFEST.in  PASOS_REUTILIZABLE.md  README.rst  automatización_lista_formulario.md  pyproject.toml  requirements.txt
administracion/: admin.py  db.py  urls.py  views.py
administracion/filtros/: banco.py  calidad_juridica.py  comunas.py  departamento.py  establecimiento.py  funcionarios.py  usuarios.py
administracion/forms/: banco.py  calidad_juridica.py  comunas.py  departamento.py  establecimiento.py  funcionarios.py  usuarios.py
administracion/migrations/: 0001_initial.py  0002_alter_banco_options_alter_calidadjuridica_options_and_more.py
administracion/mixin/: crud_mixin.py
administracion/mixins/: crud_mixins.py
administracion/models/: __init__.py  banco.py  calidad_juridica.py  comunas.py  core.py  departamentos.py  establecimientos.py  funcionarios.py  usuarios.py
administracion/templates/: base.html  index.html
administracion/templates/administracion/: index.html
administracion/templates/administracion/components/: _filters.html  _form.html  _pagination.html  _table.html  _table_result.html
administracion/templates/core/components/: footer.html  header.html  navbar.html  sidebar.html
administracion/templates/usuarios/: list.html
administracion/templates/usuarios/auth/: login.html
administracion/templatetags/: crud_tags.py
administracion/views/: banco.py  calidad_juridica.py  comuna.py  comunas.py  departamento.py  establecimiento.py  funcionarios.py  usuarios.py
config/: urls.py
(+2 files in other folders)
