[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-administracion-generica"
version = "0.1.0"
dependencies = [
    "django>=4.2",
    "django-htmx>=1.17.3",
]
description = "Un sistema de CRUD genérico reutilizable para Django."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
requires-python = ">= 3.10"
authors = [
    {name = "Tu Nombre", email = "tuemail@example.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.setuptools.packages.find]
include = ["administracion*"]
